--- a/foundry.toml
+++ b/foundry.toml
@@ -2,6 +2,7 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+fs_permissions = [{ access = "read-write", path = "./deployment.json"}]
 solc_version = '0.8.25'
 evm_version = 'shanghai'
 optimizer = true
